@@ -1,3 +1,8 @@
+2009-05-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* photoliststore.py, photoframe.py, base.py: Improved the timer
+	  implementation.  Added next_photo (restart timer).
+
 2009-05-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* plugins/__init__.py: Improved plugin imports.
